fix: load Amsterdam Four Slant font correctly on GitHub Pages
- Added .font-amsterdam class to style.css to ensure custom font applies with Tailwind CDN
- Updated HTML to use font-amsterdam instead of font-[...] syntax
- Confirmed font files load correctly via relative paths in @font-face

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
 
     <section class="px-[20vw] py-[3vw]">
-      <h1 class="text-6xl font-['Amsterdam_Four_Slant'] ml-[3vw]">Premium</h1>
+      <h1 class="text-6xl font-amsterdam ml-[3vw]">Premium</h1>
       <h1 class="text-7xl ml-[7vw] font-['JoyrideEXT']">FRONT-END</h1>
       <div id="icons" class="flex flex-wrap items-center justify-center gap-[8px] p-4 mt-[-1.5vw]">
         <img src="./images/Figma.png" alt="Figma" class="mr-[-1vw] h-11 w-auto" />
